--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,12 @@ coverage.xml
 *.mo
 *.pot
 
+# Batch Files:
+*.bat
+
+# PyCharm Project Files:
+.idea/
+
 # Django stuff:
 *.log
 local_settings.py
